# BladeEye-Automated-Detection-Monitor

./: .gitignore  API.md  BUILD.md  LICENSE  PACKAGING.md  README.md  SETUP.md  api.py  build_linux.sh  build_mac.sh  build_windows.sh  main.py  requirements.txt  start_system.sh
HackRF/: JamRF.py  __init__.py  alert_handler.py  continuous_jammer.py  passive_monitor.py  setup.py
app_wrapper/: README.md  build_standalone.py  launcher.py  reactive_jam.spec
backend/: _fsk_cython.pyx  decoder.py  execution_board.py  identifier.py  intelligence_engine.py  passive_monitor.py  patterns.py  preflight.py  protocols.py  sigint_log.py  signal_rules.json  signatures.json  signatures_data.py  zmq_bridge.py
bladeeye_pro/: __init__.py  app.py  capture_lab.py  circular_buffer.py  dsp.py  engine.py  engine_sidecar.py  hardware.py  reporting.py  runtime_health.py  session.py  sigint_logger.py  smart_functions.py
cpp/: alert_handler_impl.cc  alert_handler_impl.h  alert_handler_pybind.cc
cpp/sdr_core/: CMakeLists.txt  main.cc  ring_buffer.h  shm_layout.h
docs/: README.md  bladeeye_evolution_plan.md  bladeeye_implementation_strategy.md  execution_board.md  fast_slow_path_architecture.md  features.md  foundation_phase_delivery.md  industrial_sdr_core_blueprint.md  integrated_devices_and_protocols.md  protocols.md  user_interface.md
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.js
sessions/: execution_board.json
tests/: conftest.py  test_api_sessions.py  test_bladeeye_pro_core.py  test_bladeeye_pro_option_d.py  test_bladeeye_pro_reporting.py  (+27 more)
(+29 files in other folders)
